[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/world/WorldBase.gd" type="Script" id=1]
[ext_resource path="res://scenes/world/data/PrimaryTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/world/data/DetailTileSet.tres" type="TileSet" id=3]


[node name="WorldBase" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
world_len_x = 32
world_len_y = 19

[node name="Primary" type="TileMap" parent="."]
position = Vector2( 0, -1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 19, 6, 0, 20, 6, 0, 21, 6, 0, 22, 6, 0, 23, 6, 0, 24, 6, 0, 25, 6, 0, 26, 6, 0, 27, 6, 0, 28, 6, 0, 29, 6, 0, 30, 6, 0, 31, 6, 0, 65536, 6, 0, 65537, 1, 0, 65538, 6, 0, 65539, 4, 0, 65540, 5, 0, 65541, 6, 0, 65542, 7, 0, 65543, 4, 0, 65544, 3, 0, 65545, 1, 0, 65546, 2, 0, 65547, 5, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 6, 0, 65553, 6, 0, 65554, 7, 0, 65555, 6, 0, 65556, 6, 0, 65557, 6, 0, 65558, 6, 0, 65559, 6, 0, 65560, 6, 0, 65561, 6, 0, 65562, 6, 0, 65563, 6, 0, 65564, 6, 0, 65565, 6, 0, 65566, 6, 0, 65567, 6, 0, 131072, 6, 0, 131073, 1, 0, 131074, 6, 0, 131075, 4, 0, 131076, 5, 0, 131077, 6, 0, 131078, 7, 0, 131079, 4, 0, 131080, 3, 0, 131081, 1, 0, 131082, 2, 0, 131083, 5, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 7, 0, 131090, 6, 0, 131091, 5, 0, 131092, 6, 0, 131093, 6, 0, 131094, 6, 0, 131095, 6, 0, 131096, 6, 0, 131097, 6, 0, 131098, 6, 0, 131099, 6, 0, 131100, 6, 0, 131101, 6, 0, 131102, 6, 0, 131103, 6, 0, 196608, 6, 0, 196609, 1, 0, 196610, 6, 0, 196611, 4, 0, 196612, 5, 0, 196613, 6, 0, 196614, 7, 0, 196615, 4, 0, 196616, 3, 0, 196617, 1, 0, 196618, 2, 0, 196619, 5, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 7, 0, 196625, 6, 0, 196626, 5, 0, 196627, 4, 0, 196628, 3, 0, 196629, 6, 0, 196630, 6, 0, 196631, 6, 0, 196632, 6, 0, 196633, 6, 0, 196634, 6, 0, 196635, 6, 0, 196636, 6, 0, 196637, 6, 0, 196638, 6, 0, 196639, 6, 0, 262144, 6, 0, 262145, 1, 0, 262146, 6, 0, 262147, 4, 0, 262148, 5, 0, 262149, 6, 0, 262150, 7, 0, 262151, 4, 0, 262152, 3, 0, 262153, 1, 0, 262154, 2, 0, 262155, 5, 0, 262156, 6, 0, 262157, 6, 0, 262158, 6, 0, 262159, 7, 0, 262160, 6, 0, 262161, 5, 0, 262162, 4, 0, 262163, 3, 0, 262164, 2, 0, 262165, 1, 0, 262166, 6, 0, 262167, 6, 0, 262168, 6, 0, 262169, 6, 0, 262170, 6, 0, 262171, 6, 0, 262172, 6, 0, 262173, 6, 0, 262174, 6, 0, 262175, 6, 0, 327680, 6, 0, 327681, 1, 0, 327682, 6, 0, 327683, 4, 0, 327684, 5, 0, 327685, 6, 0, 327686, 7, 0, 327687, 4, 0, 327688, 3, 0, 327689, 1, 0, 327690, 2, 0, 327691, 5, 0, 327692, 6, 0, 327693, 6, 0, 327694, 7, 0, 327695, 6, 0, 327696, 5, 0, 327697, 4, 0, 327698, 3, 0, 327699, 2, 0, 327700, 1, 0, 327701, 6, 0, 327702, 6, 0, 327703, 6, 0, 327704, 6, 0, 327705, 6, 0, 327706, 6, 0, 327707, 6, 0, 327708, 6, 0, 327709, 6, 0, 327710, 6, 0, 327711, 6, 0, 393216, 6, 0, 393217, 1, 0, 393218, 6, 0, 393219, 4, 0, 393220, 5, 0, 393221, 6, 0, 393222, 7, 0, 393223, 4, 0, 393224, 3, 0, 393225, 1, 0, 393226, 2, 0, 393227, 5, 0, 393228, 6, 0, 393229, 7, 0, 393230, 6, 0, 393231, 5, 0, 393232, 4, 0, 393233, 3, 0, 393234, 2, 0, 393235, 1, 0, 393236, 6, 0, 393237, 6, 0, 393238, 6, 0, 393239, 6, 0, 393240, 6, 0, 393241, 6, 0, 393242, 6, 0, 393243, 6, 0, 393244, 6, 0, 393245, 6, 0, 393246, 6, 0, 393247, 6, 0, 458752, 6, 0, 458753, 1, 0, 458754, 6, 0, 458755, 4, 0, 458756, 5, 0, 458757, 6, 0, 458758, 7, 0, 458759, 4, 0, 458760, 3, 0, 458761, 1, 0, 458762, 2, 0, 458763, 5, 0, 458764, 6, 0, 458765, 6, 0, 458766, 5, 0, 458767, 4, 0, 458768, 3, 0, 458769, 2, 0, 458770, 1, 0, 458771, 6, 0, 458772, 6, 0, 458773, 6, 0, 458774, 6, 0, 458775, 6, 0, 458776, 6, 0, 458777, 6, 0, 458778, 6, 0, 458779, 6, 0, 458780, 6, 0, 458781, 6, 0, 458782, 6, 0, 458783, 6, 0, 524288, 6, 0, 524289, 1, 0, 524290, 6, 0, 524291, 4, 0, 524292, 5, 0, 524293, 6, 0, 524294, 7, 0, 524295, 4, 0, 524296, 3, 0, 524297, 1, 0, 524298, 2, 0, 524299, 5, 0, 524300, 6, 0, 524301, 6, 0, 524302, 6, 0, 524303, 3, 0, 524304, 2, 0, 524305, 1, 0, 524306, 6, 0, 524307, 6, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 524311, 6, 0, 524312, 6, 0, 524313, 6, 0, 524314, 6, 0, 524315, 6, 0, 524316, 6, 0, 524317, 6, 0, 524318, 6, 0, 524319, 6, 0, 589824, 6, 0, 589825, 1, 0, 589826, 6, 0, 589827, 4, 0, 589828, 5, 0, 589829, 6, 0, 589830, 7, 0, 589831, 4, 0, 589832, 3, 0, 589833, 1, 0, 589834, 2, 0, 589835, 5, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0, 589840, 1, 0, 589841, 6, 0, 589842, 6, 0, 589843, 6, 0, 589844, 6, 0, 589845, 6, 0, 589846, 6, 0, 589847, 6, 0, 589848, 6, 0, 589849, 6, 0, 589850, 6, 0, 589851, 6, 0, 589852, 6, 0, 589853, 6, 0, 589854, 6, 0, 589855, 6, 0, 655360, 6, 0, 655361, 1, 0, 655362, 6, 0, 655363, 4, 0, 655364, 5, 0, 655365, 6, 0, 655366, 7, 0, 655367, 4, 0, 655368, 3, 0, 655369, 1, 0, 655370, 2, 0, 655371, 5, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 655383, 6, 0, 655384, 6, 0, 655385, 6, 0, 655386, 6, 0, 655387, 6, 0, 655388, 6, 0, 655389, 6, 0, 655390, 6, 0, 655391, 6, 0, 720896, 6, 0, 720897, 1, 0, 720898, 6, 0, 720899, 4, 0, 720900, 5, 0, 720901, 6, 0, 720902, 7, 0, 720903, 4, 0, 720904, 3, 0, 720905, 1, 0, 720906, 2, 0, 720907, 5, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 720915, 6, 0, 720916, 6, 0, 720917, 6, 0, 720918, 6, 0, 720919, 6, 0, 720920, 6, 0, 720921, 6, 0, 720922, 6, 0, 720923, 6, 0, 720924, 6, 0, 720925, 6, 0, 720926, 6, 0, 720927, 6, 0, 786432, 6, 0, 786433, 1, 0, 786434, 6, 0, 786435, 4, 0, 786436, 5, 0, 786437, 6, 0, 786438, 7, 0, 786439, 4, 0, 786440, 3, 0, 786441, 1, 0, 786442, 2, 0, 786443, 5, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 786448, 6, 0, 786449, 6, 0, 786450, 6, 0, 786451, 6, 0, 786452, 6, 0, 786453, 6, 0, 786454, 6, 0, 786455, 6, 0, 786456, 6, 0, 786457, 6, 0, 786458, 6, 0, 786459, 6, 0, 786460, 6, 0, 786461, 6, 0, 786462, 6, 0, 786463, 6, 0, 851968, 6, 0, 851969, 1, 0, 851970, 6, 0, 851971, 4, 0, 851972, 5, 0, 851973, 6, 0, 851974, 7, 0, 851975, 4, 0, 851976, 3, 0, 851977, 1, 0, 851978, 2, 0, 851979, 5, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 851984, 6, 0, 851985, 6, 0, 851986, 6, 0, 851987, 6, 0, 851988, 6, 0, 851989, 6, 0, 851990, 6, 0, 851991, 6, 0, 851992, 6, 0, 851993, 6, 0, 851994, 6, 0, 851995, 6, 0, 851996, 6, 0, 851997, 6, 0, 851998, 6, 0, 851999, 6, 0, 917504, 6, 0, 917505, 1, 0, 917506, 6, 0, 917507, 4, 0, 917508, 5, 0, 917509, 6, 0, 917510, 7, 0, 917511, 4, 0, 917512, 3, 0, 917513, 1, 0, 917514, 2, 0, 917515, 5, 0, 917516, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 917520, 6, 0, 917521, 6, 0, 917522, 6, 0, 917523, 6, 0, 917524, 6, 0, 917525, 6, 0, 917526, 6, 0, 917527, 6, 0, 917528, 6, 0, 917529, 6, 0, 917530, 6, 0, 917531, 6, 0, 917532, 6, 0, 917533, 6, 0, 917534, 6, 0, 917535, 6, 0, 983040, 6, 0, 983041, 1, 0, 983042, 6, 0, 983043, 4, 0, 983044, 5, 0, 983045, 6, 0, 983046, 7, 0, 983047, 4, 0, 983048, 3, 0, 983049, 1, 0, 983050, 2, 0, 983051, 5, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983056, 6, 0, 983057, 6, 0, 983058, 6, 0, 983059, 6, 0, 983060, 6, 0, 983061, 6, 0, 983062, 6, 0, 983063, 6, 0, 983064, 6, 0, 983065, 6, 0, 983066, 6, 0, 983067, 6, 0, 983068, 6, 0, 983069, 6, 0, 983070, 6, 0, 983071, 6, 0, 1048576, 6, 0, 1048577, 1, 0, 1048578, 6, 0, 1048579, 4, 0, 1048580, 5, 0, 1048581, 6, 0, 1048582, 7, 0, 1048583, 4, 0, 1048584, 3, 0, 1048585, 1, 0, 1048586, 2, 0, 1048587, 5, 0, 1048588, 6, 0, 1048589, 6, 0, 1048590, 6, 0, 1048591, 6, 0, 1048592, 6, 0, 1048593, 6, 0, 1048594, 6, 0, 1048595, 6, 0, 1048596, 6, 0, 1048597, 6, 0, 1048598, 6, 0, 1048599, 6, 0, 1048600, 6, 0, 1048601, 6, 0, 1048602, 6, 0, 1048603, 6, 0, 1048604, 6, 0, 1048605, 6, 0, 1048606, 6, 0, 1048607, 6, 0, 1114112, 6, 0, 1114113, 1, 0, 1114114, 6, 0, 1114115, 4, 0, 1114116, 5, 0, 1114117, 6, 0, 1114118, 7, 0, 1114119, 4, 0, 1114120, 3, 0, 1114121, 1, 0, 1114122, 2, 0, 1114123, 5, 0, 1114124, 6, 0, 1114125, 6, 0, 1114126, 6, 0, 1114127, 6, 0, 1114128, 6, 0, 1114129, 6, 0, 1114130, 6, 0, 1114131, 6, 0, 1114132, 6, 0, 1114133, 6, 0, 1114134, 6, 0, 1114135, 6, 0, 1114136, 6, 0, 1114137, 6, 0, 1114138, 6, 0, 1114139, 6, 0, 1114140, 6, 0, 1114141, 6, 0, 1114142, 6, 0, 1114143, 6, 0, 1179648, 6, 0, 1179649, 6, 0, 1179650, 6, 0, 1179651, 6, 0, 1179652, 6, 0, 1179653, 6, 0, 1179654, 6, 0, 1179655, 6, 0, 1179656, 6, 0, 1179657, 6, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 6, 0, 1179661, 6, 0, 1179662, 6, 0, 1179663, 6, 0, 1179664, 6, 0, 1179665, 6, 0, 1179666, 6, 0, 1179667, 6, 0, 1179668, 6, 0, 1179669, 6, 0, 1179670, 6, 0, 1179671, 6, 0, 1179672, 6, 0, 1179673, 6, 0, 1179674, 6, 0, 1179675, 6, 0, 1179676, 6, 0, 1179677, 6, 0, 1179678, 6, 0, 1179679, 6, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="DetailAlpha" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="DetailBeta" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="DetailDelta" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}
